--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Sentiment Analysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNi7p8lOcnkLR2Z/ldODIIX",
+      "authorship_tag": "ABX9TyOteC5JT2ew550XbTGoErug",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "pGQVQfr0b3SS"
       },
       "outputs": [],
       "source": [
-        ""
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from wordcloud import WordCloud\n",
+        "import re"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.stem import WordNetLemmatizer"
+      ],
+      "metadata": {
+        "id": "WSgZEvuikgTn"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.ensemble import RandomForestClassifier"
+      ],
+      "metadata": {
+        "id": "9hbdUWDKkgv_"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score,precision_score,recall_score,confusion_matrix,roc_curve,classification_report\n",
+        "from sklearn.metrics import plot_confusion_matrix"
+      ],
+      "metadata": {
+        "id": "Eqvj106lkgyU"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "2ust8cwbkg0r"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
