--- a/web_scraper.ipynb
+++ b/web_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,29 +40,20 @@
       "\n",
       "\n",
       "Recent News Headlines for AAPL: \n",
-      "Printing a_text: Dow Jones Jumps Again On Fed Hopes; Twitter Stock Skyrockets As Tesla's Elon Musk Gives In\n",
       "Dow Jones Jumps Again On Fed Hopes; Twitter Stock Skyrockets As Tesla's Elon Musk Gives In ( Oct-05-22 12:59AM )\n",
-      "Printing a_text: Apple suppliers moved operations closer to Cupertino amid pandemic\n",
       "Apple suppliers moved operations closer to Cupertino amid pandemic ( Oct-04-22 06:22PM )\n",
-      "Printing a_text: Stocks moving after hours: Twitter, Amylyx Pharmaceuticals, AutoZone, Airbnb\n",
       "Stocks moving after hours: Twitter, Amylyx Pharmaceuticals, AutoZone, Airbnb ( 05:03PM )\n",
       "\n",
       "\n",
       "Recent News Headlines for TSLA: \n",
-      "Printing a_text: Dow Jones Jumps Again On Fed Hopes; Twitter Stock Skyrockets As Tesla's Elon Musk Gives In\n",
       "Dow Jones Jumps Again On Fed Hopes; Twitter Stock Skyrockets As Tesla's Elon Musk Gives In ( Oct-05-22 12:59AM )\n",
-      "Printing a_text: Musks Everything App X Sounds a Lot Like Chinas WeChat\n",
       "Musks Everything App X Sounds a Lot Like Chinas WeChat ( Oct-04-22 11:39PM )\n",
-      "Printing a_text: Elon Musk Twitter deal - live: Musk promises everything app as $44bn do-over buyout accepted\n",
       "Elon Musk Twitter deal - live: Musk promises everything app as $44bn do-over buyout accepted ( 11:13PM )\n",
       "\n",
       "\n",
       "Recent News Headlines for AMZN: \n",
-      "Printing a_text: Step2 launches new toddler toys for the holidays\n",
       "Step2 launches new toddler toys for the holidays ( Oct-04-22 06:39PM )\n",
-      "Printing a_text: Crypto.com Arena installs Amazons contactless shopping technology\n",
       "Crypto.com Arena installs Amazons contactless shopping technology ( 06:08PM )\n",
-      "Printing a_text: Amazon said to be freezing hiring in its retail division\n",
       "Amazon said to be freezing hiring in its retail division ( 05:49PM )\n"
      ]
     }
@@ -103,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +471,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     C:\\Users\\Ishaan\\AppData\\Roaming\\nltk_data...\n"
+      "[nltk_data]     C:\\Users\\Ishaan\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
      ]
     },
     {
@@ -489,7 +481,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
