Imported helper ipynb
Imported helper ipynb in main file

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -76,6 +76,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Importing files\n",
+        "import ipynb\n",
+        "from ipynb.fs.full.stock_helper_functions import *"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 29,
       "metadata": {},
       "outputs": [],
@@ -623,22 +634,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Getting stock price for stock $AAPL\n"
+            "Getting stock open for stock $AAPL\n",
+            "AAPL 136.69000244140625\n"
           ]
         }
       ],
       "source": [
-        "def getStockPrice(symbol):\n",
-        "    print(\"Getting stock price for stock $\"+symbol)\n",
-        "\n",
-        "getStockPrice(\"AAPL\")"
+        "aapl_open = getStockOpen(\"AAPL\")"
       ]
     },
     {
