--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -647,25 +647,16 @@
         }
       ],
       "source": [
+        "#Testing helper functions from stock_helper_functions.ipynb\n",
         "aapl_open = getStockOpen(\"AAPL\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "# Sentiment Analysis\n",
-        "analyzer = SentimentIntensityAnalyzer()\n",
-        "\n",
-        "columns = ['Ticker', 'Date', 'Time', 'Headline']\n",
-        "news = pd.DataFrame(parsed_news, columns=columns)\n",
-        "scores = news['Headline'].apply(analyzer.polarity_scores).tolist()\n",
-        "\n",
-        "df_scores = pd.DataFrame(scores)\n",
-        "news = news.join(df_scores, rsuffix='_right')"
-      ]
+      "source": []
     }
   ],
   "metadata": {
