Added all stock helper functions in main application
Added all stock helper functions in main application and started creation of a dataset

--- a/stock_helper_functions.ipynb
+++ b/stock_helper_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting stock data for stock $AAPL\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "Index(['Open', 'High', 'Low', 'Close', 'Adj Close', 'Volume'], dtype='object')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-12-20</th>\n",
+       "      <td>131.389999</td>\n",
+       "      <td>133.25</td>\n",
+       "      <td>129.889999</td>\n",
+       "      <td>132.300003</td>\n",
+       "      <td>132.300003</td>\n",
+       "      <td>77432819</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Open    High         Low       Close   Adj Close    Volume\n",
+       "Date                                                                        \n",
+       "2022-12-20  131.389999  133.25  129.889999  132.300003  132.300003  77432819"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def getStockDataDaily(symbol, day):\n",
+    "    print(\"Getting stock data for stock $\"+symbol)\n",
+    "    df = yf.download(symbol, start=day, period = \"1d\")\n",
+    "    #df2 = df.iloc[: , 1:]\n",
+    "    print(df.columns)\n",
+    "    return df\n",
+    "\n",
+    "getStockDataDaily(\"AAPL\", \"2022-12-20\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -19,16 +107,16 @@
      "output_type": "stream",
      "text": [
       "Getting stock close for stock $AAPL\n",
-      "AAPL 134.50999450683594\n"
+      "AAPL 132.3000030517578\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "134.50999450683594"
+       "132.3000030517578"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -56,16 +144,16 @@
      "output_type": "stream",
      "text": [
       "Getting stock open for stock $AAPL\n",
-      "AAPL 136.69000244140625\n"
+      "AAPL 131.38999938964844\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "136.69000244140625"
+       "131.38999938964844"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -93,16 +181,16 @@
      "output_type": "stream",
      "text": [
       "Getting stock high for stock $AAPL\n",
-      "AAPL 137.64999389648438\n"
+      "AAPL 133.25\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "137.64999389648438"
+       "133.25"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -130,16 +218,16 @@
      "output_type": "stream",
      "text": [
       "Getting stock low for stock $AAPL\n",
-      "AAPL 133.72999572753906\n"
+      "AAPL 129.88999938964844\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "133.72999572753906"
+       "129.88999938964844"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
