Refactored old code
Deleted code from NewsAPI

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1346,224 +1346,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 160,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from os import environ as env\n",
-        "from dotenv import load_dotenv\n",
-        "load_dotenv()\n",
-        "key = env['key']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 161,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "class Init():\n",
-        "    \"\"\"Class that initializes global value for the module. It also use general method to initialize value.\n",
-        "     \"\"\"\n",
-        "\n",
-        "    def __init__(self):\n",
-        "        \"\"\"Built-in method to inialize the global values for the module\n",
-        "\n",
-        "        Attributes\n",
-        "        -------------------\n",
-        "        `self.start.date` : str\n",
-        "            start date of the training period. Must be within the last year for the free version of FinHub. Format\n",
-        "            must be \"YYYY-mm-dd\"\n",
-        "        `self.end_date` : str\n",
-        "            end date of the training period. Format must be \"YYYY-mm-dd\"\n",
-        "        `self.ticker` : list\n",
-        "            tickers on which we want to perform the test. Can be one ticker in form of a list as well as a list\n",
-        "            of tickers like the s&p 500.\n",
-        "        `self.db_name` : str\n",
-        "            name of the sqlite3 database\n",
-        "        `self.dir_path` : str\n",
-        "            directory where the data are saved. It takes into account the `self.start_date` and `self.end_date`\n",
-        "        `self.start_date_` : datetime object\n",
-        "            same thing as `start_date` but as a datetime object\n",
-        "        `self.end_date_` : datetime object\n",
-        "            same thing as `start_date` but as a datetime object\n",
-        "        \"\"\"\n",
-        "\n",
-        "        #initialize value here\n",
-        "        self.start_date = \"2020-02-10\"\n",
-        "        self.end_date = \"2020-03-20\"\n",
-        "        self.ticker = 'AAPL'\n",
-        "\n",
-        "        self.db_name = 'financial_data'\n",
-        "        self.dir_path = os.path.dirname(os.path.realpath(__file__)) + '/output/' + self.start_date + '_' + \\\n",
-        "                        self.end_date + '/'\n",
-        "        Path(self.dir_path).mkdir(parents=True, exist_ok=True) #create new path if it doesn't exist\n",
-        "        self.start_date_ = datetime.strptime(self.start_date, \"%Y-%m-%d\")  #datetime object\n",
-        "        self.end_date_ = datetime.strptime(self.end_date, \"%Y-%m-%d\")    #datetime object\n",
-        "        self.delta_date = abs((self.end_date_ - self.start_date_).days) #number of days between 2 dates\n",
-        "\n",
-        "        try:\n",
-        "            self.start_date_ > self.end_date_\n",
-        "        except:\n",
-        "            print(\"'start_date' is after 'end_date'\")\n",
-        "\n",
-        "        try :\n",
-        "            datetime.strptime(self.start_date, \"%Y-%m-%d\") <= (datetime.now()- relativedelta(years=1))\n",
-        "        except:\n",
-        "            print(\"'start_date' is older than 1 year. It doesn't work with the free version of FinHub\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 162,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "class FinnHub():\n",
-        "    \"\"\"Class to make API calls to FinnHub\"\"\"\n",
-        "\n",
-        "    def __init__(self,start_date,end_date,start_date_,end_date_,ticker,dir_path,db_name):\n",
-        "        \"\"\" Class constructor\n",
-        "\n",
-        "        Parameters\n",
-        "        ----------\n",
-        "        `start_date` : str\n",
-        "            Start date of the request. Must be within 1 year from now for must request\n",
-        "            with the free version of FinHub\n",
-        "        `end_date` : str\n",
-        "            End date of the request.\n",
-        "        `start_date_` : datetime object\n",
-        "            Same thing as `start_date` but as a datetime object\n",
-        "        `end_date_` : datetime object\n",
-        "             Same thing as `start_date` but as a datetime object\n",
-        "        `ticker` : str\n",
-        "            Ticker symbol\n",
-        "        `db_name` : str\n",
-        "            Name of the sqlite database\n",
-        "        `dir_path` : str\n",
-        "            Directory  where our data will be stored\n",
-        "\n",
-        "        Attributes\n",
-        "        ----------\n",
-        "        `self.max_call` : int\n",
-        "            maximum api calls per minute for the finhub API\n",
-        "        `self.time_sleep` : int\n",
-        "            seconds to sleep before making a new API call. Default is 60 seconds as the maximum number of API calls is\n",
-        "            per minute\n",
-        "        `self.nb_request` : int\n",
-        "            nb of request made so far. Set to 0 in constructor `__init__` as we may loop through ticker\n",
-        "            and want to avoid the variable to reset to 0 when exiting the wrapper `iterate_day()` (which could generate\n",
-        "            an error)\n",
-        "        `self.finhub_key` : str\n",
-        "            finhub unique API key. Get yours here : https://finnhub.io/\n",
-        "        `self.db_name : str\n",
-        "            default file name for the sql database\n",
-        "        \"\"\"\n",
-        "\n",
-        "        #Initialize attributes values here\n",
-        "        self.max_call = 60\n",
-        "        self.time_sleep = 60\n",
-        "        self.nb_request = 0\n",
-        "        self.finhub_key = config('FINHUB_KEY')\n",
-        "        self.news_header = ['category', 'datetime','headline','id','image','related','source','summary','url']\n",
-        "        self.start_date = start_date\n",
-        "        self.end_date = end_date\n",
-        "        self.ticker = ticker\n",
-        "        self.ticker_request = ticker #different value because ticker like 'ALL' (All State) can generate error in SQLite\n",
-        "                                    #database\n",
-        "        self.dir_path = dir_path\n",
-        "        self.db_name = db_name\n",
-        "        self.js_data = []\n",
-        "\n",
-        "        self.start_date_ = start_date_ #datetime object\n",
-        "        self.end_date_ = end_date_ #datetime object\n",
-        "\n",
-        "        #call the methods to access historical financial headlines\n",
-        "        tickers = get_tickers()\n",
-        "        for ticker_ in tickers:\n",
-        "            self.ticker = ticker_ + '_'\n",
-        "            self.ticker_request = ticker_\n",
-        "            self.req_new()\n",
-        "            self.create_table()\n",
-        "            self.clean_table()\n",
-        "            self.lang_review()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 163,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def get_tickers():\n",
-        "    \"\"\"Method that gets the stock symbols from companies listed in the S&P 500\n",
-        "\n",
-        "    Return\n",
-        "    ------\n",
-        "    `tickers` : list\n",
-        "        S&P 500 company symbols\n",
-        "    \"\"\"\n",
-        "    resp = requests.get('http://en.wikipedia.org/wiki/List_of_S%26P_500_companies')\n",
-        "    soup = bs.BeautifulSoup(resp.text, 'lxml')\n",
-        "    table = soup.find_all('table')[0]  # Grab the first table\n",
-        "\n",
-        "    tickers = []\n",
-        "    for row in table.findAll('tr')[1:]:\n",
-        "        ticker = row.findAll('td')[0].text.strip('\\n')\n",
-        "        tickers.append(ticker)\n",
-        "\n",
-        "    return tickers"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 164,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "def iterate_day(func):\n",
-        "    \"\"\" Decorator that makes the API call on FinHub each days between the `self.start_date`\n",
-        "    and `self.end_date` \"\"\"\n",
-        "\n",
-        "    def wrapper_(self):\n",
-        "        delta_date_ = delta_date(self.start_date,self.end_date)\n",
-        "        date_ = self.start_date\n",
-        "        date_obj = self.start_date_\n",
-        "\n",
-        "        for item in range(delta_date_ + 1):\n",
-        "            self.nb_request +=1\n",
-        "            func(self,date_)\n",
-        "            date_obj = date_obj + relativedelta(days=1)\n",
-        "            date_  = date_obj.strftime(\"%Y-%m-%d\")\n",
-        "            if self.nb_request == (self.max_call-1):\n",
-        "                time.sleep(self.time_sleep)\n",
-        "                self.nb_request=0\n",
-        "    return wrapper_\n",
-        "\n",
-        "@iterate_day\n",
-        "def req_new(self,date_):\n",
-        "    \"\"\" Method that makes news request(s) to the Finnhub API\"\"\"\n",
-        "\n",
-        "    request_ = requests.get('https://finnhub.io/api/v1/company-news?symbol=' + self.ticker_request + '&from=' +\n",
-        "                            date_ + '&to=' + date_ + '&token=' + self.finhub_key)\n",
-        "    self.js_data += request_.json()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 165,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from newsapi import NewsApiClient\n",
-        "import sys\n",
-        "from datetime import date, timedelta, datetime\n",
-        "import os\n",
-        "sia = SentimentIntensityAnalyzer()"
-      ]
-    },
-    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -1986,7 +1768,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.0"
+      "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
