refactored historic news into a single function
refactored historic news into a single function

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1509,62 +1509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Get data from AlphaAdvantage for one ticker for a particular day\n",
-        "def getHistoricNewsData(ticker, startDate = None, endDate = None):\n",
-        "    url = 'https://www.alphavantage.co/query?'\n",
-        "    if startDate and endDate:\n",
-        "        startDate = toAADate(startDate)\n",
-        "        endDate = toAADate(endDate)\n",
-        "        Myparams = {'function': 'NEWS_SENTIMENT', 'tickers': ticker, 'time_from': startDate, 'time_to': endDate, 'sort': 'LATEST','limit': 100, 'apikey': AAapikey}\n",
-        "    else:\n",
-        "        Myparams = {'function': 'NEWS_SENTIMENT', 'tickers': ticker, 'sort': 'LATEST','limit': 100, 'apikey': AAapikey}\n",
-        "    r = requests.get(url, params = Myparams)\n",
-        "    data = r.json()\n",
-        "    return data\n",
-        "\n",
-        "newsJson = getHistoricNewsData('AAPL', '20230108', '20230111')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 101,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "#newsJson.keys()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 102,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "#newsJson.get(\"feed\")[0].keys()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 103,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "historic_news = pd.DataFrame(columns=['Date', 'Title'])\n",
-        "for i in newsJson.get(\"feed\"):\n",
-        "    test_date = i.get(\"time_published\")\n",
-        "    test_date = test_date[:8]\n",
-        "    row = [test_date, i.get(\"title\")]\n",
-        "    new_df = pd.DataFrame([row],columns=['Date', 'Title'])\n",
-        "    historic_news = pd.concat([historic_news, new_df], axis=0, ignore_index=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 111,
       "metadata": {},
       "outputs": [
         {
@@ -1626,6 +1571,28 @@
         }
       ],
       "source": [
+        "# Get data from AlphaAdvantage for one ticker for a particular day\n",
+        "def getHistoricNewsData(ticker, startDate = None, endDate = None):\n",
+        "    url = 'https://www.alphavantage.co/query?'\n",
+        "    if startDate and endDate:\n",
+        "        startDate = toAADate(startDate)\n",
+        "        endDate = toAADate(endDate)\n",
+        "        Myparams = {'function': 'NEWS_SENTIMENT', 'tickers': ticker, 'time_from': startDate, 'time_to': endDate, 'sort': 'LATEST','limit': 100, 'apikey': AAapikey}\n",
+        "    else:\n",
+        "        Myparams = {'function': 'NEWS_SENTIMENT', 'tickers': ticker, 'sort': 'LATEST','limit': 100, 'apikey': AAapikey}\n",
+        "    r = requests.get(url, params = Myparams)\n",
+        "    data = r.json()\n",
+        "    #return data\n",
+        "    historic_news = pd.DataFrame(columns=['Date', 'Title'])\n",
+        "    for i in newsJson.get(\"feed\"):\n",
+        "        test_date = i.get(\"time_published\")\n",
+        "        test_date = test_date[:8]\n",
+        "        row = [test_date, i.get(\"title\")]\n",
+        "        new_df = pd.DataFrame([row],columns=['Date', 'Title'])\n",
+        "        historic_news = pd.concat([historic_news, new_df], axis=0, ignore_index=True)\n",
+        "    return historic_news\n",
+        "\n",
+        "historic_news = getHistoricNewsData('AAPL', '20230108', '20230111')\n",
         "print(historic_news)"
       ]
     },
