Refactoring Data to optimize sentiment analysis
Made a general function for sentiment analysis that can be used for both historical data and today's data

--- a/volume_analysis.ipynb
+++ b/volume_analysis.ipynb
@@ -208,7 +208,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sentiment analysis\n",
+    "nltk.download('vader_lexicon')\n",
+    "# Sentiment Analysis\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "columns = ['Ticker', 'Date', 'Time', 'Headline']\n",
+    "news = pd.DataFrame(parsed_news, columns=columns)\n",
+    "scores = news['Headline'].apply(analyzer.polarity_scores).tolist()\n",
+    "\n",
+    "df_scores = pd.DataFrame(scores)\n",
+    "news = news.join(df_scores, rsuffix='_right')\n",
+    "# View Data \n",
+    "#news = pd.DataFrame()\n",
+    "news['Date'] = pd.to_datetime(news.Date).dt.date\n",
+    "\n",
+    "unique_ticker = news['Ticker'].unique().tolist()\n",
+    "news_dict = {name: news.loc[news['Ticker'] == name] for name in unique_ticker}\n",
+    "\n",
+    "values = []\n",
+    "for ticker in tickers: \n",
+    "    dataframe = news_dict[ticker]\n",
+    "    dataframe = dataframe.set_index('Ticker')\n",
+    "    dataframe = dataframe.drop(columns = ['Headline'])\n",
+    "    print ('\\n')\n",
+    "    print (dataframe.head())\n",
+    "    \n",
+    "    mean = round(dataframe['compound'].mean(), 2)\n",
+    "    values.append(mean)\n",
+    "    \n",
+    "df = pd.DataFrame(list(zip(tickers, values)), columns =['Ticker', 'Mean Sentiment']) \n",
+    "df = df.set_index('Ticker')\n",
+    "df = df.sort_values('Mean Sentiment', ascending=False)\n",
+    "print ('\\n')\n",
+    "print (df)"
+   ]
   }
  ],
  "metadata": {
