--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -812,154 +812,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 232,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Getting stock close for stock $AAPL\n",
-            "AAPL 135.2100067138672\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "135.2100067138672"
-            ]
-          },
-          "execution_count": 232,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "def getStockClose(symbol):\n",
-        "    print(\"Getting stock close for stock $\"+symbol)\n",
-        "    ticker = yf.Ticker(symbol)\n",
-        "    data = ticker.history()\n",
-        "    #print(data)\n",
-        "    last_price = data['Close'].iloc[-1]\n",
-        "    print(symbol, last_price)\n",
-        "    return last_price\n",
-        "\n",
-        "getStockClose(\"AAPL\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 233,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Getting stock open for stock $AAPL\n",
-            "AAPL 136.81500244140625\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "136.81500244140625"
-            ]
-          },
-          "execution_count": 233,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "def getStockOpen(symbol):\n",
-        "    print(\"Getting stock open for stock $\"+symbol)\n",
-        "    ticker = yf.Ticker(symbol)\n",
-        "    data = ticker.history()\n",
-        "    #print(data)\n",
-        "    last_price = data['Open'].iloc[-1]\n",
-        "    print(symbol, last_price)\n",
-        "    return last_price\n",
-        "\n",
-        "getStockOpen(\"AAPL\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 234,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Getting stock high for stock $AAPL\n",
-            "AAPL 138.61000061035156\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "138.61000061035156"
-            ]
-          },
-          "execution_count": 234,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "def getStockHigh(symbol):\n",
-        "    print(\"Getting stock high for stock $\"+symbol)\n",
-        "    ticker = yf.Ticker(symbol)\n",
-        "    data = ticker.history()\n",
-        "    #print(data)\n",
-        "    last_price = data['High'].iloc[-1]\n",
-        "    print(symbol, last_price)\n",
-        "    return last_price\n",
-        "\n",
-        "getStockHigh(\"AAPL\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 235,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Getting stock low for stock $AAPL\n",
-            "AAPL 135.02999877929688\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "135.02999877929688"
-            ]
-          },
-          "execution_count": 235,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "def getStockLow(symbol):\n",
-        "    print(\"Getting stock low for stock $\"+symbol)\n",
-        "    ticker = yf.Ticker(symbol)\n",
-        "    data = ticker.history()\n",
-        "    #print(data)\n",
-        "    last_price = data['Low'].iloc[-1]\n",
-        "    print(symbol, last_price)\n",
-        "    return last_price\n",
-        "\n",
-        "getStockLow(\"AAPL\")"
-      ]
-    },
-    {
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
@@ -1489,10 +1341,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 245,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "AAPL\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in tickers:\n",
+        "    "
+      ]
     },
     {
       "cell_type": "code",
