Changes in interval for historic news data
Changes in interval for historic news data

--- a/Sentiment_Analysis.ipynb
+++ b/Sentiment_Analysis.ipynb
@@ -1399,7 +1399,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 63,
       "metadata": {},
       "outputs": [
         {
@@ -1407,21 +1407,21 @@
           "output_type": "stream",
           "text": [
             "endDate is: 2023-01-29\n",
-            "startDate is: 2022-11-30\n",
-            "startDate is: 20221130T0130\n",
+            "startDate is: 2022-12-30\n",
+            "startDate is: 20221230T0130\n",
             "endDate is: 20230129T0130\n",
             "           Date                                           Headline Ticker\n",
-            "0    2022-11-30  Market Volatility Eases Slightly Following Hop...   AAPL\n",
-            "1    2022-11-30  Fraud Detection and Prevention Market Size [20...   AAPL\n",
-            "2    2022-11-30  Smart Investors Should Buy These 3 Stocks, Dow...   AAPL\n",
-            "3    2022-11-30  Mindfulness Meditation Application Market to R...   AAPL\n",
-            "4    2022-11-30  3 Reasons I'm Avoiding Meta Platforms Stock Fo...   AAPL\n",
+            "0    2022-12-30  Tesla, Apple, Ford, Southwest Airlines, Hoth T...   AAPL\n",
+            "1    2022-12-30  Flexing Their Muscles: Live Sports Are Streami...   AAPL\n",
+            "2    2022-12-30  Investor Fear Eases After Nasdaq Rises More Th...   AAPL\n",
+            "3    2022-12-30  73% of Warren Buffett's Portfolio Is Invested ...   AAPL\n",
+            "4    2022-12-30  Got $5,000? 2 Tech Stocks to Buy and Hold for ...   AAPL\n",
             "..          ...                                                ...    ...\n",
-            "195  2022-12-06  Here is What to Know Beyond Why Apple Inc.  ( ...   AAPL\n",
-            "196  2022-12-06  Billionaire Mark Cuban Becomes Elon Musk's Mos...   AAPL\n",
-            "197  2022-12-06  Taiwan Semiconductor Boosts US Investment Afte...   AAPL\n",
-            "198  2022-12-06  4 Stocks You'll Regret Not Buying at Their Cur...   AAPL\n",
-            "199  2022-12-06  Dow Jones Slips; Microsoft Ups Battle For Acti...   AAPL\n",
+            "195  2023-01-06  Apple Unusual Options Activity For January 06 ...   AAPL\n",
+            "196  2023-01-06  Wall St jumps as December jobs report eases ra...   AAPL\n",
+            "197  2023-01-06  Stocks Mostly Higher; Tesla, GE In Focus: Week...   AAPL\n",
+            "198  2023-01-06  Qualcomm Satellite Messaging Partnership Likel...   AAPL\n",
+            "199  2023-01-06  Global Digital Gift Card Market Report 2022 to...   AAPL\n",
             "\n",
             "[200 rows x 3 columns]\n"
           ]
@@ -1462,7 +1462,7 @@
         "    return historic_news\n",
         "\n",
         "#historic_news = getHistoricNewsData('AAPL', '2022-10-10', '2mo')\n",
-        "historic_news = getHistoricNewsData('AAPL', interval = '2mo')\n",
+        "historic_news = getHistoricNewsData('AAPL', interval = '1mo')\n",
         "print(historic_news)"
       ]
     },
@@ -1476,7 +1476,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1490,6 +1490,7 @@
         "    columns = ['Ticker', 'Date', 'Time', 'Headline']\n",
         "    #Creating dataframe from news\n",
         "    news = pd.DataFrame(parsedNews, columns=columns)\n",
+        "    print(news)\n",
         "    #Getting scores for headlines\n",
         "    scores = news['Headline'].apply(analyzer.polarity_scores).tolist()\n",
         "\n",
@@ -1520,14 +1521,14 @@
         "        #Finding compound number for news of every day\n",
         "        testdf = pd.DataFrame(columns = ['Date', 'Mean Sentiment'])\n",
         "        testdf = round(dataframe.groupby('Date')['compound'].mean(), 2)\n",
-        "        print(testdf)\n",
+        "        print(testdf.shape)\n",
         "        #Adding values to values list\n",
         "        #og values.append(mean)\n",
         "    \n",
         "   \n",
         "    #print(round(dataframe.groupby('Date')['compound'].mean(), 2))\n",
         "    #print(\"VALUES------------\")\n",
-        "    print(values)\n",
+        "    #print(values)\n",
         "        \n",
         "    #Combining tickers and values into new dataframe\n",
         "    #df = pd.DataFrame(list(zip(tickers, values)), columns =['Ticker', 'Mean Sentiment']) \n",
@@ -1547,25 +1548,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Date\n",
-            "2022-11-30    0.04\n",
-            "2022-12-01    0.04\n",
-            "2022-12-02    0.12\n",
-            "2022-12-03   -0.06\n",
-            "2022-12-04   -0.03\n",
-            "2022-12-05    0.13\n",
-            "2022-12-06   -0.07\n",
-            "Name: compound, dtype: float64\n",
-            "Empty DataFrame\n",
-            "Columns: [Ticker, Date, Compound]\n",
-            "Index: []\n",
+            "    Ticker        Date  Time  \\\n",
+            "0     AAPL  2022-12-30   NaN   \n",
+            "1     AAPL  2022-12-30   NaN   \n",
+            "2     AAPL  2022-12-30   NaN   \n",
+            "3     AAPL  2022-12-30   NaN   \n",
+            "4     AAPL  2022-12-30   NaN   \n",
+            "..     ...         ...   ...   \n",
+            "195   AAPL  2023-01-06   NaN   \n",
+            "196   AAPL  2023-01-06   NaN   \n",
+            "197   AAPL  2023-01-06   NaN   \n",
+            "198   AAPL  2023-01-06   NaN   \n",
+            "199   AAPL  2023-01-06   NaN   \n",
+            "\n",
+            "                                              Headline  \n",
+            "0    Tesla, Apple, Ford, Southwest Airlines, Hoth T...  \n",
+            "1    Flexing Their Muscles: Live Sports Are Streami...  \n",
+            "2    Investor Fear Eases After Nasdaq Rises More Th...  \n",
+            "3    73% of Warren Buffett's Portfolio Is Invested ...  \n",
+            "4    Got $5,000? 2 Tech Stocks to Buy and Hold for ...  \n",
+            "..                                                 ...  \n",
+            "195  Apple Unusual Options Activity For January 06 ...  \n",
+            "196  Wall St jumps as December jobs report eases ra...  \n",
+            "197  Stocks Mostly Higher; Tesla, GE In Focus: Week...  \n",
+            "198  Qualcomm Satellite Messaging Partnership Likel...  \n",
+            "199  Global Digital Gift Card Market Report 2022 to...  \n",
+            "\n",
+            "[200 rows x 4 columns]\n",
+            "(8,)\n",
             "-----------DF\n"
           ]
         },
@@ -1704,7 +1721,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.0"
+      "version": "3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
