Created datasets folder
Datasets folder contains 1 year history csv's. Historic_sentiment now takes user input for ticker

--- a/Historic_Sentiment.ipynb
+++ b/Historic_Sentiment.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,24 +94,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final rolling date is: 2023-02-25\n"
+      "MSFT\n"
      ]
     }
    ],
    "source": [
-    "hist = getHistoricNewsData('AAPL')"
+    "\n",
+    "ticker = input('Input Ticker:\\n')  \n",
+    "print(ticker)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final rolling date is: 2023-03-02\n"
+     ]
+    }
+   ],
+   "source": [
+    "hist = getHistoricNewsData(ticker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -119,19 +138,19 @@
      "output_type": "stream",
      "text": [
       "<bound method NDFrame.head of             Date                                           Headline Ticker\n",
-      "0     2022-03-01  US stocks fall, oil tops $105 as Ukraine crisi...   AAPL\n",
-      "1     2022-03-02  Apple halts product sales in Russia after Ukra...   AAPL\n",
-      "2     2022-03-02  Russia says its economy is taking 'serious blo...   AAPL\n",
-      "3     2022-03-02  Rich Russians turn to luxury jewellery, watche...   AAPL\n",
-      "4     2022-03-03  Market Rallies, But Still Must Do This; 5 Stoc...   AAPL\n",
+      "0     2022-03-01  MSFT: Better Buy for 2022: Salesforce.com vs. ...   MSFT\n",
+      "1     2022-03-02  Facebook, YouTube, TikTok restrict access to R...   MSFT\n",
+      "2     2022-03-02  Apple, Google, Netflix, and Visa join the grow...   MSFT\n",
+      "3     2022-03-02  Ukraine calls on gaming industry to suspend bu...   MSFT\n",
+      "4     2022-03-02  TikTok faces delicate dance to keep all sides ...   MSFT\n",
       "...          ...                                                ...    ...\n",
-      "4596  2023-02-01  23 Things That Didn't Exist When Tom Brady Ent...   AAPL\n",
-      "4597  2023-02-01  Meta stock spikes despite earnings miss, as Fa...   AAPL\n",
-      "4598  2023-02-01                 Morning Bid: Riding the Fed dragon   AAPL\n",
-      "4599  2023-02-01  Meta Revenue Beats As Company Announces $40 Bi...   AAPL\n",
-      "4600  2023-02-01  Fed Chief Triggers 'Gratifying' Rally; Meta Sp...   AAPL\n",
+      "4623  2023-02-02  How to protect yourself from tax fraud and sca...   MSFT\n",
+      "4624  2023-02-02  Zacks Earnings Trends Highlights: Microsoft, I...   MSFT\n",
+      "4625  2023-02-02  Pinterest Bows Down To Macro Uncertainties; Le...   MSFT\n",
+      "4626  2023-02-02  Samsung Hints Metaverse Ambitions At Product L...   MSFT\n",
+      "4627  2023-02-02      US filings for jobless aid lowest since April   MSFT\n",
       "\n",
-      "[4601 rows x 3 columns]>\n"
+      "[4628 rows x 3 columns]>\n"
      ]
     }
    ],
@@ -141,11 +160,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist.to_csv('AAPL-365-day-hist.csv')"
+    "histname = \"datasets/\" + ticker + \"-365-day-hist.csv\"\n",
+    "hist.to_csv(histname)"
    ]
   }
  ],
